# neural-c

./: .gitignore  CMakeLists.txt  NeuralNetwork.h  linalg.c  linalg.h  main.c  nn_free.c  nn_init.c  nn_predict.c  nn_print.c
